log
Tue 23 Apr 2024 04:35:43 PM UTC: 
 tests:  0|6
total_score: 0/70
4f30017
Tue 23 Apr 2024 04:42:33 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:5: error: expected ‘,’ or ‘;’ before ‘return’
   56 |     return arr;
      |     ^~~~~~
hashmap.c:55:11: error: unused variable ‘arr’ [-Werror=unused-variable]
   55 |  HashMap *arr = (HashMap *) malloc (sizeof(HashMap) * capacity)
      |           ^~~
hashmap.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
912f94d
Tue 23 Apr 2024 04:42:53 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:3: error: expected ‘,’ or ‘;’ before ‘return’
   57 |   return arr;
      |   ^~~~~~
hashmap.c:56:12: error: unused variable ‘arr’ [-Werror=unused-variable]
   56 |   HashMap *arr = (HashMap *) malloc (sizeof(HashMap) * capacity)
      |            ^~~
hashmap.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
19648de
Tue 23 Apr 2024 04:42:59 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
58dba03
Tue 23 Apr 2024 04:52:00 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
86ec983
Tue 23 Apr 2024 04:53:30 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
1137088
Tue 23 Apr 2024 04:54:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4d9b882
Tue 23 Apr 2024 04:57:18 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
9ececde
Tue 23 Apr 2024 04:57:53 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
7520e11
Tue 23 Apr 2024 04:59:47 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
86e85ca
Tue 23 Apr 2024 05:05:16 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
65aa392
Tue 23 Apr 2024 05:05:31 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
a9cf3cc
Tue 23 Apr 2024 05:06:21 PM UTC: 
 hashmap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
13f8b90
Tue 23 Apr 2024 05:17:11 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
83ae371
Tue 23 Apr 2024 05:20:30 PM UTC: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
e91d937
Tue 23 Apr 2024 05:21:06 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
7e73b52
Tue 23 Apr 2024 05:22:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
ea6150e
Tue 23 Apr 2024 05:26:49 PM UTC: 
 hashmap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|0
d7c7bcf
Tue 23 Apr 2024 05:27:34 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f439fd3
Tue 23 Apr 2024 05:28:18 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
6955b22
Tue 23 Apr 2024 05:29:51 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
0b2e887
Wed 24 Apr 2024 12:42:16 AM UTC: 
 hashmap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:11: error: unused variable ‘aux’ [-Werror=unused-variable]
   46 |     Pair *aux = createPair(key, value);
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
eacacdb
Wed 24 Apr 2024 12:42:41 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
63676bb
